# soal_playground

./: LICENSE  Optimizer22_poster.ipynb  Optimizer_Workshop.ipynb  a.org  cheatsheet.org  datasets.org  dimension reduction.org  proposal.docx  readme.org  requirements.txt  sk_playground.ipynb  soalpy_playground.ipynb  tutorials.org  workshop.org
benchmarks/: correctness.org  gen.org  time command.org  tools.org
benchmarks/memleak/: cudf_test.py  gen.org  t1.py
data/: FCPS.org  datasets.org  generation.org
evaluations/: k-means.org
implementations/: FCPS.org  Faiss.org  PyTorch.org  RAPIDS.org  Spark.org  Tensorflow.org  breadcrumbs.org  dask.org  dropped.org  pyclustering.org  scipy.org  sklearn.org  tosee.org  vaex.org
implementations/DL/autoencoders/: gen.org
implementations/Julia/: MLJ.org
logs/: 2.txt  kmeans_1.txt  kmeans_1_nv  nop_1.txt  timeouts.org
maintainability/: C.org  gen.org  language_agnostic.org  markdown.org
meetings/: next.org
meetings/1401/Ordibehesht/: 2.org  7.org
soalpy/: .gitignore  pyproject.toml  setup.py
soalpy/soalpy/: gmm_runners.py  hdbscan_runners.py  kmeans_runners.py  runners.py  spectral_runners.py  utils.py
solution/: hyperplane intersections.org
src_bash/: init.bash
src_py/: dask_ml_kmeans.py  run_one.py  t1.py  t_spectral_dask.py
src_zsh/: init.zsh
tmp/: soalpy_playground.ipynb
workshops/Clustering in Python from Zero/: gen.org
