[tool.poetry]
name = "soalpy"
version = "0.1.0"
description = ""
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
# numpy = "^1.22.2"
icecream = "^2.1.0"
scikit-learn = "^1.0.2"
pynight = { git = "https://github.com/NightMachinary/pynight", branch = "master" } # "^0.1"
fastai = "^2.5.3"
bkmeans = { git = "https://github.com/NightMachinary/bkmeans", branch = "main" }
numba = "^0.55.0"
dask = {extras = ["complete"], version = "^2022.1.0"}
dask-ml = {extras = ["complete"], version = "^2022.1.22"}
zarr = "^2.10.3"
pyspark = "^3.2.1"
pyclustering = "^0.10.1"
rdata = "^0.6"
hdbscan = "^0.8.27"
xarray = "^0.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "soalpy_env"
